--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
+      <h1>Schedules</h1>
+      <p>Click here to see your schedules:</p>
+      <button onclick="userAuthorization()">Schedules</button>
       <div id="greeting-container"></div>
     </div>
   </body>
