delete unchosen secondary calendars

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,8 @@
       <iframe id="calendar" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       <button id="previous" onclick="displayPreviousCalendar()">Previous</button>
       <button id="next" onclick="displayNextCalendar()">Next</button>
+      <br>
+      <button id="chosenCal" onclick="deleteUnchosenCalendars()">Choose this schedule!</button>
     </div>
   </body>
 </html>
