fix login by adding welcome / login page that only redirects to course form once authorized

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,23 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Schedules</title>
+    <title>SchedulR</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>Schedules</h1>
+      <h1>SchedulR</h1>
       <div id="schedules">
-      <p>Click here to see your schedules:</p>
-      <button onclick="fetchUserCalendar()">Schedules</button>
-      </div>
-      <p id="loading">loading . . .</p>
-      <iframe id="calendar" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-      <button id="previous" onclick="displayPreviousCalendar()">Previous</button>
-      <button id="next" onclick="displayNextCalendar()">Next</button>
-      <br>
-      <button id="chosenCal" onclick="deleteUnchosenCalendars()">Choose this schedule!</button>
-    </div>
+      <p>Welcome to SchedulR!</p>
+      <p>This webapp will make planning for registration painless by finding your ideal course schedule.</p>
+      <p>Click below to login and get started.</p>
+      <button onclick="login()">Get Started</button>
   </body>
 </html>
